<?xml version="1.0" encoding="utf-8"?><!-- item_user.xml -->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp"
    android:padding="4dp"
    tools:ignore="MissingDefaultResource">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:maxWidth="100dp"
            android:maxHeight="100dp"
            android:src="@drawable/ic_face_foreground"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_toEndOf="@+id/imageView"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/nameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp" />


            <!-- Other views for username, email, and name -->
            <TextView
                android:id="@+id/tokenCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/token_id"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/designationCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/designation"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/phoneNumberCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="20sp" />


        </LinearLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>
